<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sign"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:gravity="right|left"
        android:maxLength="1"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/texAns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:gravity="right"
        android:maxLength="11"
        android:paddingTop="40dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="40dp" />

    <TableLayout
        android:id="@+id/calc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:paddingTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/num7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_7"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/num8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_8"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/num9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_9"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_div"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/num4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_4"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/num5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_5"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/num6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_6"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/mul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_mul"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/num1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/num2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_2"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/num3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_3"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_sub"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/num0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_0"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/num00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="00"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_ac"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_add"
                android:textSize="32sp"
                tools:ignore="ButtonStyle,HardcodedText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/button_background"
                android:text="@string/_equal"
                android:textSize="32sp" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>